--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,23 @@
 /*----- font-family -----*/
+@font-face {
+    font-family: 'GothamM';
+    src: url('../fonts/GothamM/GOTHAMMEDIUM.eot');
+    src: url('../fonts/GothamM/GOTHAMMEDIUM.eot') format('embedded-opentype'),
+         url('../fonts/GothamM/GOTHAMMEDIUM.woff2') format('woff2'),
+         url('../fonts/GothamM/GOTHAMMEDIUM.woff') format('woff'),
+         url('../fonts/GothamM/GOTHAMMEDIUM.ttf') format('truetype'),
+         url('../fonts/GothamM/GOTHAMMEDIUM.svg#GOTHAMMEDIUM') format('svg');
+}
+
+@font-face {
+    font-family: 'GothamB';
+    src: url('../fonts/GothamB/GOTHAMBOLD.eot');
+    src: url('../fonts/GothamB/GOTHAMBOLD.eot') format('embedded-opentype'),
+         url('../fonts/GothamB/GOTHAMBOLD.woff2') format('woff2'),
+         url('../fonts/GothamB/GOTHAMBOLD.woff') format('woff'),
+         url('../fonts/GothamB/GOTHAMBOLD.ttf') format('truetype'),
+         url('../fonts/GothamB/GOTHAMBOLD.svg#GOTHAMBOLD') format('svg');
+}
 
 /*----- reset -----*/
 
@@ -49,6 +68,129 @@ article, aside, details, figure, footer, header, menu, nav, section, summary {
 /*==================
     Header
 ====================*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*==================
     main-content
